--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"types": "dist/esm/index.d.ts",
 	"scripts": {
 		"build": "npm run clean && tsc",
+		"postinstall": "npm run clean && tsc",
 		"clean": "rimraf ./dist",
 		"watch": "tsc --watch",
 		"prepublishOnly": "npm run build"
