--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"types": "dist/esm/index.d.ts",
 	"scripts": {
 		"build": "npm run clean && tsc",
-		"postinstall": "npm install && tsc",
+		"postinstall": "tsc",
 		"clean": "rimraf ./dist",
 		"watch": "tsc --watch",
 		"prepublishOnly": "npm run build"
@@ -15,8 +15,6 @@
 	"license": "MIT",
 	"dependencies": {
 		"@capacitor/core": "latest"
-	},
-	"devDependencies": {
 		"rimraf": "^3.0.0",
 		"typescript": "^3.9.5",
 		"@capacitor/ios": "latest",
